   signature of the operation is changed. You can now explcitly access the 
   body and header elements.
 - Fix parsing HTTP bindings when there are no message elements (#185)
 - Fix deserializing RPC responses (#219
 - Add support for SOAP 1.2 Fault subcodes (#210, vashek)
 - Don't alter the _soapheaders elements during rendering, instead create a 
   deepcopy first. (#188)


0.18.1 (2016-09-23)
-------------------
 - PyPi release error


0.18.0 (2016-09-23)
-------------------
 - Fix parsing Any elements by using the namespace map of the response node 
   instead of the namespace map of the wsdl. (#184, #164)
 - Improve handling of nested choice elements (choice>sequence>choice)


0.17.0 (2016-09-12)
-------------------
 - Add support for xsd:notation (#183)
 - Add improvements to resolving phase so that all objects are resolved.
 - Improve implementation of xsd.attributeGroup and xsd.UniqueType
 - Create a deepcopy of the args and kwargs passed to objects so that the 
   original are unmodified.
 - Improve handling of wsdl:arrayType


0.16.0 (2016-09-06)
-------------------
 - Fix error when rendering choice elements with have sequences as children, 
   see #150
 - Re-use credentials passed to python -mzeep <wsdl> (#130)
 - Workaround invalid usage of qualified vs non-qualified element tags in the
   response handling (#176)
 - Fix regression when importing xsd:schema's via wsdl:import statements (#179)


0.15.0 (2016-09-04)
-------------------
 - All wsdl documents and xsd schemas are now globally available for eachother.
   While this is not correct according to the (messy) soap specifications, it
   does make zeep more compatible with all the invalid wsdl documents out
   there. (#159)
 - Implement support for attributeGroup (#160)
 - Add experimental support for ws-addressing (#92)
 - Fix handling of Mime messages with no parts (#168)
 - Workaround an issue where soap servers don't qualify references (#170)