@@ -270,3 +270,6 @@ def test_force_wsa_soap12(recwarn, monkeypatch):
         </soap-env:Envelope>
     """
     assert_nodes_equal(expected, envelope)
+
+    assert headers['Content-Type'] == (
+        'application/soap+xml; charset=utf-8; action=urn:dummyRequest')
