@@ -9,6 +9,7 @@
  - Add support for SOAP 1.2 Fault subcodes (#210, vashek)
  - Don't alter the _soapheaders elements during rendering, instead create a 
    deepcopy first. (#188)
+ - Add the SOAPAction to the Content-Type header in SOAP 1.2 bindings (#211)
 
 
 0.18.1 (2016-09-23)
